<resources>
    <string name="app_name">Comunicacion</string>
    <string name="info">Este progrma ha sido desarrollado en el curso de Android para demostrar como
        se pueden lanzar nuevas actividades desde la actividad principal"</string>
    <string name="prueba">Hola %s ¿Aceptas las condiciones?"</string>

    <!-- Actividad 03 -->
    <string name="suma">SUMA</string>
    <string name="comprobarResultado">COMPROBAR RESULTADO</string>
    <string name="resultadoCorrecto">El resultado de la suma es corrector</string>
    <string name="resultadoIncorrecta">El resultado de la suma es incorrecto</string>
    <string name="recuentoCorrectas">PREGUNTAS CORRECTAS:</string>
    <string name="recuentoIncorrectas"> INCORRECTAS:</string>
    <string name="correcta">El resultado de la operación ha sido CORRECTA</string>
    <string name="incorrecta">El resultado de la operación ha sido INCORRECTA</string>

    <!-- Actividad 04 -->
    <string name="introDatos">Introduce tus datos:</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="sexo">Sexo:</string>
    <string name="sexoMasculino">Masculino</string>
    <string name="sexoFemenino">Femenino</string>
    <string name="aficiones">Aficiones</string>
    <string name="enviar">ENVIAR</string>
    <string name="aficionMusica">Música</string>
    <string name="aficionLectura">Lectura</string>
    <string name="aficionDeportes">Deportes</string>
    <string name="aficionViajar">Viajar</string>

    <string name="datosIntroducidos">Los datos introducidos son: </string>


</resources>
