<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introDatos"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etNombreAct4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellidos"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etApellidoAct4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radioSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexoMasculino"
                android:checked="false" />

            <RadioButton
                android:id="@+id/radioFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexoFemenino" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aficiones"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbMusica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aficionMusica"
                android:checked="false" />

            <CheckBox
                android:id="@+id/cbLectura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aficionLectura" />

            <CheckBox
                android:id="@+id/cbDeportes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aficionDeportes" />

            <CheckBox
                android:id="@+id/cbViajar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aficionViajar" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar" />

</LinearLayout>

