<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSuma"
        android:text="@string/suma"
        android:textSize="30dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LytOperadores"
        android:orientation="horizontal"
        android:layout_below="@id/txtSuma"
        android:gravity="center_horizontal">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operando1"
            android:textSize="20dp"
            android:width="50dp"
            android:gravity="center"
            android:enabled="false"/>
            <!--android:layout_below="@id/Suma"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operadorSuma"
            android:text="+"
            android:textSize="20dp" />
            <!--android:layout_below="@id/Suma"
            android:layout_toRightOf="@+id/operando1"/>-->

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operando2"
            android:textSize="20dp"
            android:width="50dp"
            android:gravity="center"
            android:enabled="false"/>
            <!--android:layout_below="@id/Suma"
            android:layout_toRightOf="@+id/operadorSuma"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operadorIgual"
            android:text="="
            android:textSize="20dp"/>
        <!--android:layout_below="@id/Suma"
        android:layout_toRightOf="@+id/operando2"/>-->

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultado"
            android:textSize="20dp"
            android:width="50dp"/>
            <!--android:layout_below="@id/Suma"
            android:layout_toRightOf="@+id/operadorIgual"/>-->
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnComprobar"
        android:text="@string/comprobarResultado"
        android:layout_below="@id/LytOperadores"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LytRecuentoResultados"
        android:orientation="horizontal"
        android:layout_below="@+id/btnComprobar"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:id="@+id/lblPreguntasCorrectas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuentoCorrectas"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/lblPreguntasCorrectasValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="0"
            />

        <TextView
            android:id="@+id/lblPreguntasIncorrectas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuentoIncorrectas"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/lblPreguntasIncorrectasValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="0"/>


    </LinearLayout>


</RelativeLayout>
